<resources>
    <string name="app_name">NBUPiggyBank</string>
    <string name="title_activity_user">User</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nbu_project">NBU Project</string>
    <string name="piggybank">PiggyBank</string>
    <string name="name">Име</string>
    <string name="Име">Име</string>
    <string name="ЕГН">ЕГН</string>
    <string name="Имейл">Имейл…</string>
    <string name="Парола">Парола…</string>
    <string name="emailLabel">Имейл</string>
    <string name="passLabel">Парола</string>
    <string name="Регистрация">Регистрация</string>
    <string name="password">Парола…</string>
    <string name="buttonlogin">Вход</string>
    <string name="forgotpass">Забравена парола?</string>
    <string name="registerlink">Регистрация</string>
    <string name="email">Имейл…</string>
    <string name="LoginBanner">Вход</string>
    <string name="halfscreen">HalfScreen</string>
    <string name="loginDesc">Моля, влезте в системата</string>
    <string name="loginicon">LoginIcon</string>
    <string name="piggyicon">piggyicon</string>
    <string name="piggyregister">piggyRegister</string>
    <string name="arrowbacklogin">arrowbacklogin</string>
    <string name="createprofile">Създай профил</string>
    <string name="nalichnarazpolagaemost">Налична разполагаемост</string>
    <string name="recentTransactions">Последни транзакции</string>
    <string name="phonelabel">Мобилен номер</string>
    <string name="nbu_piggy_bank">NBU Piggy Bank</string>
    <string name="login_register">Вход / Регистрация</string>
    <string name="forward">Напред</string>
    <string name="sendcode">Изпрати код</string>
    <string name="enterCode">Въведи код</string>
    <string name="phoneauthimagebutton">phoneAuthImageButton</string>
    <string name="sendphonecode">Изпрати код</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="bankappforchildren">Банково приложение за деца</string>
    <string name="plus_one">+1</string>
    <string name="newPhoneNumber">Нов мобилен номер</string>
    <string name="enterWithEmail">Влез с имейл</string>
    <string name="Hello">Здравей,</string>
    <string name="redpandaicon">redPandaIcon</string>
    <string name="cardNumber">Номер на карта</string>
    <string name="availableAmount">Налична сума</string>
    <string name="bgn">BGN</string>
    <string name="ExpiryDate">Дата</string>
    <string name="Amount">Сума</string>
    <string name="shop">Магазин</string>
    <string name="amountExample">-10</string>
    <string name="amountExample2">-10.25</string>
    <string name="exampleDate1">10/05/2022</string>
    <string name="amountExample3">10.25</string>
    <string name="amountExample4">12.60</string>
    <string name="transactions">Транзакции</string>
    <string name="menuBegin">Начало</string>
    <string name="menuProfile">Профил</string>
    <string name="menuTransactions">Преводи</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myProfile">Моят профил</string>
    <string name="cardBanner">Карта</string>
    <string name="privateInfo">Лични данни</string>
    <string name="iban">IBAN</string>
    <string name="demoTransaction">Демо транзакция</string>
    <string name="fromAccount">От сметка</string>
    <string name="account">Сметка</string>
    <string name="recipient">Получател</string>
    <string name="recipientIban">IBAN на получател</string>
    <string name="sendMoney">Преведи</string>
    <string name="addToAmount">Добави към сметка</string>
    <string name="sendTo">Изпрати до</string>
    <string name="addToMyAmount">към моята сметка</string>

    <string-array name="spinnerTransaction">
        <item>Моята сметка</item>
        <item>Чужда сметка</item>
    </string-array>
</resources>