<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:padding="20dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/piggybank"
            android:textSize="70sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            android:layout_centerHorizontal="true"
        />

        <TextView
            android:id="@+id/bannerDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nbu_project"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="italic"
            android:layout_below="@id/banner"
            android:layout_centerHorizontal="true"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bannerDescription"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#78909C"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_below="@id/email"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:id="@+id/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffa6c1"
            android:text="@string/buttonlogin"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/ForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Login"
            android:text="@string/forgotpass"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ForgotPass"
            android:text="@string/registerlink"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            />

    </RelativeLayout>
</ScrollView>