<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_margin="6dp"
        android:background="@drawable/transaction_border"
        >

        <RelativeLayout
            android:id="@+id/layoutTransactionLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            >

            <ImageView
                android:id="@+id/redPandaIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/red_panda" />

            <TextView
                android:id="@+id/transactionDate"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_below="@id/redPandaIcon"
                android:layout_marginStart="25dp"
                android:layout_centerHorizontal="true"
                android:text="@string/exampleDate1"
                android:layout_height="wrap_content"
                android:textColor="@color/black_02"
                android:textSize="14sp" />
        </RelativeLayout>



        <TextView
            android:id="@+id/transactionName"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:text="@string/shop"
            android:layout_height="wrap_content"
            android:textColor="@color/black_02"
            android:textSize="20sp"
            android:layout_weight="1"
            />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginEnd="4dp">

        <TextView
            android:id="@+id/amountOutput"
            android:layout_width="78dp"
            android:layout_gravity="center"
            android:layout_marginStart="2dp"
            android:layout_height="wrap_content"
            android:text="@string/amountExample2"
            android:layout_weight="1"
            android:textColor="@color/deepPink"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/amountInput"
            android:layout_width="78dp"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="4dp"
            android:layout_height="wrap_content"
            android:text="@string/amountExample4"
            android:layout_weight="1"
            android:textColor="@color/greenLight"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/transactionBGN"
            android:layout_width="50dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/bgn"
            android:layout_weight="1"
            android:textColor="@color/black_02"
            android:textSize="20sp"
            />
        </LinearLayout>
</LinearLayout>
